--- a/autor.html
+++ b/autor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de HTML Básico - Tópicos</title>
+    <title>Criador</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,6 @@
 <body>
     <!--Menu superior-->
     <header>
-        <h1>Curso de HTML Básico - Tópicos</h1>
         <a href="index.html">Voltar à Página Inicial</a>
     </header>
     <main>
