--- a/VSC.html
+++ b/VSC.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso de CSS Básico</title>
+    <title>Curso de VSCode Básico</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,17 +14,17 @@
 <body>
     <!--menu superior-->
     <header>
-        <h1>Curso de CSS Básico</h1>
+        <h1>Curso de VSCode Básico</h1>
         <a href="index.html">Voltar à Página Inicial</a>
     </header>
     <main>
         <!--Curso-->
         <section class="course-details">
             <article class="conteudo">
-                <img class="apostila" src="./img/CSS gratis.png" alt="">
-                <h2 class="text">Apostila CSS</h2>
-                <p>Para acessar gratuitamente nossa apostila, clique no botão abaixo e faça o download agora mesmo.</p>
-                <a class="botoescont" href="files/CSS.pdf" download>Download</a>
+                <img class="apostila" src="./img/Configrando o VSCODE.png" alt="">
+                <h2 class="text">Apostila VSCode</h2>
+                <p></p>
+                <a class="botoescont" href="files/Em Breve.txt" download>Download</a>
             </article>
             <article class="conteudo">
                 <h2 class="text">Aulas</h2>
