--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     <main>
         <section class="courses">
             <article>
+                <div><img class="vscode" src="./img/vslogo.png" alt=""></div>
+                <h2>Curso de VSCode Básico</h2>
+                <p>Este curso aborda os fundamentos do HTML.</p>
+                <a href="VSC.html">Ver Curso</a>
+            </article>
+            <article>
                 <div><img class="html" src="./img/HTML5_logo_and_wordmark.svg.png" alt=""></div>
                 <h2>Curso de HTML Básico</h2>
                 <p>Este curso aborda os fundamentos do HTML.</p>
