--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             </article>
             <article>
                 <div><img class="pp" src="" alt=""></div>
-                <h2>VEM NOVIDADES!</h2>
-                <p>Fique atento as novidades!</p>
+                <h2>Pratica de JAVASCRIPT!</h2>
+                <p>Aprenda a Fazer o jogo Flappy Bird!</p>
                 <a href="">Em Breve</a>
             </article>
             <article>
