--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <a href="PP.html?id=javascript">Em Breve</a>
             </article>
             <article>
-                <div><img class="pp" src="" alt=""></div>
+                <div><img class="pp" src="./img/Flapy bird em JS.png" alt=""></div>
                 <h2>Pratica de JAVASCRIPT!</h2>
                 <p>Aprenda a Fazer o jogo Flappy Bird!</p>
                 <a href="">Em Breve</a>
