--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
+    </style>
+
 
 </head>
 
@@ -83,7 +89,7 @@
                 <div><img class="pp" src="./img/Flapy bird em JS.png" alt=""></div>
                 <h2>Pratica de JAVASCRIPT!</h2>
                 <p>Aprenda a Fazer o jogo Flappy Bird!</p>
-                <a href="">Em Breve</a>
+                <a href="Flappy.html">Em Breve</a>
             </article>
             <article>
                 <div><img class="pp" src="" alt=""></div>
